[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "gatdaem1d"
version = "2.0.1"
description = "Time-domain airborne electromagnetic forward modelling"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Ross C Brodie", email = "ross.c.brodie@ga.gov.au" }]
keywords = ["electromagnetic", "geophysics"]
dependencies = ["numpy"]
classifiers = [
    'License :: OSI Approved',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Electromagnetic :: Airborne :: Forward modelling :: Geophysics'
]

[tool.spin]
package = 'gatdaem1d'

[tool.setuptools.packages.find]
gatdaem1d = ["."]