[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatdaem1d"
version = "2.0.3"
description = "Time-domain airborne electromagnetic forward modelling"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Ross C Brodie", email = "ross.c.brodie@ga.gov.au" }]
keywords = ["electromagnetic", "geophysics"]
dependencies = [
    "numpy",
    "matplotlib"
]
classifiers = [
    'License :: OSI Approved',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Electromagnetic :: Airborne :: Forward modelling :: Geophysics'
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
gatdaem1d = ['gatdaem1d.*']